# Students-UI

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  conanfile.py  conanfile.txt  file.qml  pyproject.toml
profiles/: Linux
src/: Student.cpp  Student.h  main.cpp  main.qml  message.cpp  message.hpp  student.cpp  student.hpp
